Correctly set the scrollbars on the modal to only shown when content is bigger than the maximum height specified

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ textarea {
 }
 #modal-textfield--comments {
 	max-height: 400px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 /* Details Page Card Tables */
